WebCore:

Reviewed by Dave Hyatt.

        text-shadow is not drawn for text with transparent colour
        https://bugs.webkit.org/show_bug.cgi?id=21374

        Test: fast/text/shadow-translucent-fill.html

        * rendering/InlineTextBox.cpp:
        (WebCore::paintTextWithShadows): If the text fill color is not opaque,
        paint all shadows separately from the text, by casting them from
        clipped-out opaque text.

LayoutTests:

        Reviewed by Dave Hyatt.

        text-shadow is not drawn for text with transparent colour
        https://bugs.webkit.org/show_bug.cgi?id=21374

        * fast/text/shadow-translucent-fill.html: Added.
        * platform/mac/fast/css/shadow-multiple-expected.checksum:
        * platform/mac/fast/css/shadow-multiple-expected.png:
        * platform/mac/fast/text/shadow-translucent-fill-expected.checksum: Added.
        * platform/mac/fast/text/shadow-translucent-fill-expected.png: Added.
        * platform/mac/fast/text/shadow-translucent-fill-expected.txt: Added.



Canonical link: https://commits.webkit.org/37584@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@45956 268f45cc-cd09-0410-ab3c-d52691b4dbfc